feat: add style and visual

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+    --bg-color: #dff1ff;
+    --main-color: #ff4f8b;
+    --player-color: #ff359b;
+    --shadow-color: rgba(255, 255, 255, 0.8);
+    --border-color: rgba(255, 255, 255, 0.5);
+    --player-bg-color: rgba(255, 255, 255, 0.1);
+}
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +15,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 1440px;
+    margin: 0 auto;
+    background: linear-gradient(to bottom, var(--bg-color), var(--main-color) )
 }
 .container {
     display: flex;
@@ -15,28 +26,28 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: rgb(160, 110, 183);
+    background: linear-gradient(to bottom, var(--bg-color), var(--main-color) )
 }
 .container::after {
     content: '';
     position: absolute;
-    z-index: 10;
-    left: 15%;
+    z-index: 1;
+    left: 20vh;
     top: 15%;
     width: 45vh;
     height: 45vh;
-    background-color: #040404;
+    background-color: var(--main-color);
     border-radius: 50%;
 }
 .container::before {
     content: '';
     position: absolute;
-    z-index: 10;
-    right: 15%;
-    bottom: 15%;
-    width: 35vh;
-    height: 35vh;
-    background-color: #14040c;
+    z-index: 1;
+    right: 15vh;
+    bottom: 5vh;
+    width: 45vh;
+    height: 45vh;
+    background-color: var(--player-color);
     border-radius: 50%;
 }
 .player-box {
@@ -45,12 +56,103 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
-    z-index: 11;
-    background: radial-gradient(transparent, rgba(255,255,255, 0.2));
-    width: 50vh;
+    z-index: 10;
+    background: radial-gradient(transparent, var(--player-bg-color));
+    border: 2px solid var(--border-color);
+    width: 70vh;
     height: 50vh;
-    backdrop-filter: blur(25px);
-    border: 2px solid rgba(255, 255, 255, 0.5);
-    border-radius: 15px;
-    box-shadow: -10px -10px 20px rgba(255,255,255, 0.1), 10px 10px 20px rgba(0, 0, 0, 0.1), 0 40px 50px rgba(0, 0, 0, 0.2);
+    border-radius: 50px;
+    
 }
+.player-box::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    bottom: 0;
+    z-index: 20;
+    border-top: 1px solid var(--border-color);
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    background-color: var(--player-bg-color);
+    backdrop-filter: blur(10px);
+}
+.btn-box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 50%;
+}
+.btn-box button {
+    position: relative;
+    top: 0;
+    display: block;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    height: 10vh;
+    width: 10vh;
+    border-radius: 10px;
+    margin: 10px;
+    background-color:rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(4px);
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 1;
+    box-shadow: 0 5px 45px rgba(0,0,0,0.1);
+    transition: top 0.5s, z-index 0.5s, transform 0.5s;
+    transition-delay: 0.5s, 0s, 0s;
+}
+.btn-box button:hover {
+    top: -50px;
+    transform: translateY(50px);
+    transition-delay: 0s, 0.5s, 0.5s;
+    z-index: 30;
+}
+.btn-box button:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    transform: skewX(45deg) translateX(150px);
+    transition: .5s;
+}
+.btn-box button:hover:before {
+    transform: skewX(45deg) translateX(-150px);
+}
+.prev-btn {
+    background-image: url(assets/svg/prev-btn.svg);
+    background-size: 6vh;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.play-btn {
+    background-image: url(assets/svg/play-btn.svg);
+    background-size: 6vh;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.pause-btn {
+    background-image: url(assets/svg/pause-btn.svg);
+    background-size: 6vh;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.stop-btn {
+    background-image: url(assets/svg/stop-btn.svg);
+    background-size: 6vh;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.next-btn {
+    background-image: url(assets/svg/next-btn.svg);
+    background-size: 6vh;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
