feat: change color theme

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --bg-color: #dff1ff;
-    --main-color: #ff4f8b;
-    --player-color: #ff359b;
+    --bg-color: #FBE0C3;
+    --main-color: #ffbb98;
+    --player-color: #7d8e95;
     --shadow-color: rgba(255, 255, 255, 0.8);
     --border-color: rgba(255, 255, 255, 0.5);
     --player-bg-color: rgba(255, 255, 255, 0.1);
